# topic_proxy

./: CMakeLists.txt  README.md  package.xml
blob/: CHANGELOG.rst  CMakeLists.txt  package.xml
blob/include/blob/: Blob.h  compression.h  shape_shifter.h
blob/msg/: Blob.msg
blob/src/blob/: compression.cpp  shape_shifter.cpp
blob_test/: CMakeLists.txt  package.xml
blob_test/src/: publisher.cpp  subscriber.cpp
include/topic_proxy/: compression.h  topic_proxy.h
launch/: client.launch
msg/: MessageInstance.msg
src/: client.cpp  compression.cpp  server.cpp  service_client.cpp  topic_proxy.cpp
srv/: AddPublisher.srv  GetMessage.srv  RequestMessage.srv  TopicRequest.srv
topic_proxy/: CHANGELOG.rst  package.xml
topic_proxy/include/topic_proxy/: service_client.h  topic_proxy.h
topic_proxy/launch/: client.launch
topic_proxy/src/: client.cpp  server.cpp
topic_proxy/srv/: PublishMessage.srv
